syntax = "proto3";

package gocalcharger.service;

option go_package = "gocalcharger/api/service";

service GocalChargerServer {
  rpc SayHello (HelloRequest) returns (HelloReply) {}
  rpc DownloadFile(DownloadFileRequest) returns (stream DownloadFileReply) {}
}

// The request message containing the user's name.
message HelloRequest {
  string name = 1;
}

// The response message containing the greetings
message HelloReply {
  string message = 1;
}

// The request message containing the file's information.
message DownloadFileRequest {
  string clientName = 1;
  string fileName = 2;
  string filePath = 3;
}

// The request message containing the file.
message DownloadFileReply {
  string fileName = 1;
  int32 fileSize = 2;
  bytes filePart = 3;
  int32 process = 4;
  int32 total = 5;
  int32 fileChunk = 6;
}